clusters/k3s/apps/nginx-1/service-nginx-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-flux-1
  namespace: default
spec:
  type: NodePort  # Expose on node port
  selector:
    app: flux-nginx-1
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30117  # Fixed NodePort
