clusters/k3s/apps/nginx-1/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-1
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: nginx-prod.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-nginx-flux-1
            port:
              number: 8080
